// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render comments label, when comments are loaded 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled comments 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  color: #696969;
  font-family: "GillSansMTStd-Medium";
  font-size: 13px;
  margin: 0;
  padding-bottom: 30px;
  padding-top: 5px;
  text-align: center;
}

.c1 {
  color: #333333;
  font-family: "TimesModern-Bold";
  font-size: 27px;
  margin: 0;
  padding-bottom: 5px;
  padding-top: 30px;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <p
      class="c1"
    >
      Comments for this article have been turned off
    </p>
    <p
      class="c2"
    >
      Comments are subject to our community guidelines, which can be viewed 
      <a
        class="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-textDecorationLine-1ddef8g"
        data-focusable="true"
        dir="auto"
        href="https://www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
        role="link"
      >
        here
      </a>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`enabled comments 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pre-switchover comments 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`single comment 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`window listeners added all listeners added 1`] = `
Array [
  "spot-im-current-user-typing-start",
  "spot-im-current-user-sent-message",
  "spot-im-notification-drop-down-link",
  "spot-im-user-up-vote-click",
  "spot-im-sort-by-select",
  "spot-im-user-clicked-reply",
  "spot-im-clicked-settings",
  "spot-im-user-notifications-click",
  "spot-im-open-user-profile",
  "spot-im-share-type",
]
`;

exports[`zero comments 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;
